# challengeVideoModelEvaluation

./: .gitignore  CHANGELOG.md  README.md  run.sh  test.sh
docs/: architecture.md
docs/reports/: summary.md
video_model_eval/: .env  Cargo.toml
video_model_eval/results/: output.json  results.csv  summary.md
video_model_eval/src/: evaluator.rs  lib.rs  main.rs  models.rs  person_detection.rs  vlm.rs
video_model_eval/tests/: integration_test.rs
video_model_eval/tests/data/: ground_truth.json
