[package]
name = "video_model_eval"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_model_eval"
path = "src/lib.rs"

[[bin]]
name = "video_model_eval"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
opencv = "0.98"
csv = "1.1"
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"

[dev-dependencies]
dotenv = "0.15"